# 2180-Video_Scribe_AISkill-POC

./: MULTILINGUAL_IMPLEMENTATION_PLAN.md  README.md  action_summary.py  actionsList.json  analyze_chapters.py  analyze_video.py  basketball_actions_list.json  basketball_objects_list.json  basketball_persons_list.json  cobra_sample_usage.ipynb  compliance_actions_list.json  compliance_objects_list.json  compliance_persons_list.json  cooking_actions_list.json  cooking_objects_list.json  cooking_persons_list.json  dataVisualize.py  emotionsList.json  empty_ActionSummary_output.json  lens.json  objectsList.json  office_actions_list.json  office_objects_list.json  office_persons_list.json  peoplesList.json  prompting.md  pyproject.toml  requirements.txt  run_analysis.py  themesList.json  updatedVideoScribe.md  video_client.py  video_tracker.py
src/cobrapy/: __init__.py  chapter_generator.py  cobra_utils.py  track_refiner.py  video_analyzer.py  video_client.py  video_preprocessor.py
src/cobrapy/analysis/: __init__.py  action_summary.py  base_analysis_config.py  basic_summary.py  chapter_summary.py  languageIdentifier.py
src/cobrapy/local_models/: local_phi4_adapter.py  phi4.py  sanitygemma.py  transcriber.py
src/cobrapy/models/: environment.py  video.py
src/cobrapy/pipeline/: bytetrack.yaml  deepsort.yaml  step0_yolo_track.py  step0b_reid_split_tracks.py
src/cobrapy/prompts/: action_summary.py
src/ui/: Dockerfile  README.md  components.json  milAcSumm.json  package-lock.json  package.json  sample.env  tailwind.config.js
src/ui/app/: layout.js  page.js
(+9 files in other folders)
